--- a/scripts/sg130/sg130.config
+++ b/scripts/sg130/sg130.config
@@ -1,14 +1,14 @@
 DESIGN my_chip ;
 GRID 1 ;
-AREA 1000 1000 ;
+AREA 4000 3000 ;
 
-# --- CORNERS ---
+# --- CORNERS --- #
 CORNER corner_sw SW sg13g2_Corner ;
 CORNER corner_se SE sg13g2_Corner ;
 CORNER corner_nw NW sg13g2_Corner ;
 CORNER corner_ne NE sg13g2_Corner ;
 
-# --- PADS ---
+# --- PADS --- #
 # Using 4mA InOut for GPIOs.
 # Using IOVdd/IOVss for the Ring Power.
 
@@ -17,17 +17,17 @@ PAD vss_0     S  sg13g2_IOPadIOVss ;
 PAD gpio_0    S  sg13g2_IOPadInOut4mA ;
 PAD vdd_0     S  sg13g2_IOPadIOVdd ;
 
-# Top (North)
+# Top (North) #
 PAD vss_1     N  sg13g2_IOPadIOVss ;
 PAD gpio_1    N  sg13g2_IOPadInOut4mA ;
 PAD vdd_1     N  sg13g2_IOPadIOVdd ;
 
-# Left (West)
+# Left (West) #
 PAD vss_2     W  sg13g2_IOPadIOVss;
 PAD gpio_2    W  sg13g2_IOPadInOut4mA ;
 PAD vdd_2     W  sg13g2_IOPadIOVdd;
 
-# Right (East)
+# Right (East) #
 PAD vss_3     E  sg13g2_IOPadIOVss;
 PAD gpio_3    E  sg13g2_IOPadInOut4mA ;
 PAD vdd_3     E  sg13g2_IOPadIOVdd;
