added cells to document

--- a/scripts/gf180/gf180.config
+++ b/scripts/gf180/gf180.config
@@ -11,11 +11,37 @@ CORNER corner_ne NE gf180mcu_fd_io__cor ;
 
 # --- PADS --- #
 
-# SOUTH
-# Using dvss/dvdd as placeholders since vssio/vddio were missing from your list
-PAD vss_0     S  gf180mcu_fd_io__dvss ;
-PAD gpio_0    S  gf180mcu_fd_io__bi_t ;
-PAD vdd_0     S  gf180mcu_fd_io__dvdd ;
+# SOUTH #
+PAD vss_01     S  gf180mcu_fd_io__dvss ;
+PAD vss_02     S  gf180mcu_fd_io__dvss ;
+PAD vss_03     S  gf180mcu_fd_io__dvss ;
+PAD vss_04     S  gf180mcu_fd_io__dvss ;
+PAD analog_01  S gf180mcu_fd_io__asig_5p0;
+PAD analog_02  S gf180mcu_fd_io__asig_5p0;
+PAD analog_03  S gf180mcu_fd_io__asig_5p0;
+PAD analog_04  S gf180mcu_fd_io__asig_5p0;
+PAD analog_05  S gf180mcu_fd_io__asig_5p0;
+PAD analog_06  S gf180mcu_fd_io__asig_5p0;
+PAD analog_07  S gf180mcu_fd_io__asig_5p0;
+PAD analog_08  S gf180mcu_fd_io__asig_5p0;
+PAD gpio_01    S  gf180mcu_fd_io__bi_t ;
+PAD gpio_02    S  gf180mcu_fd_io__bi_t ;
+PAD gpio_03    S  gf180mcu_fd_io__bi_t ;
+PAD gpio_04    S  gf180mcu_fd_io__bi_t ;
+PAD analog_09  S gf180mcu_fd_io__asig_5p0;
+PAD analog_010  S gf180mcu_fd_io__asig_5p0;
+PAD analog_011  S gf180mcu_fd_io__asig_5p0;
+PAD analog_012  S gf180mcu_fd_io__asig_5p0;
+PAD gpio_05    S  gf180mcu_fd_io__bi_t ;
+PAD gpio_06    S  gf180mcu_fd_io__bi_t ;
+PAD gpio_07    S  gf180mcu_fd_io__bi_t ;
+PAD gpio_08    S  gf180mcu_fd_io__bi_t ;
+PAD gpio_09    S  gf180mcu_fd_io__bi_t ;
+PAD vdd_01     S  gf180mcu_fd_io__dvdd ;
+PAD vdd_02     S  gf180mcu_fd_io__dvdd ;
+PAD vdd_03     S  gf180mcu_fd_io__dvdd ;
+PAD vdd_04     S  gf180mcu_fd_io__dvdd ;
+
 
 # NORTH
 PAD vss_1     N  gf180mcu_fd_io__dvss ;
