--- a/scripts/gf180/gf180.config
+++ b/scripts/gf180/gf180.config
@@ -32,6 +32,8 @@ PAD analog_09  S gf180mcu_fd_io__asig_5p0;
 PAD analog_010  S gf180mcu_fd_io__asig_5p0;
 PAD analog_011  S gf180mcu_fd_io__asig_5p0;
 PAD analog_012  S gf180mcu_fd_io__asig_5p0;
+PAD analog_013  S gf180mcu_fd_io__asig_5p0;
+PAD analog_014  S gf180mcu_fd_io__asig_5p0;
 PAD gpio_05    S  gf180mcu_fd_io__bi_t ;
 PAD gpio_06    S  gf180mcu_fd_io__bi_t ;
 PAD gpio_07    S  gf180mcu_fd_io__bi_t ;
@@ -44,16 +46,92 @@ PAD vdd_04     S  gf180mcu_fd_io__dvdd ;
 
 
 # NORTH
-PAD vss_1     N  gf180mcu_fd_io__dvss ;
-PAD gpio_1    N  gf180mcu_fd_io__bi_t ;
-PAD vdd_1     N  gf180mcu_fd_io__dvdd ;
+PAD vss_10     N  gf180mcu_fd_io__dvss ;
+PAD vss_11     N  gf180mcu_fd_io__dvss ;
+PAD vss_12     N  gf180mcu_fd_io__dvss ;
+PAD vss_13     N  gf180mcu_fd_io__dvss ;
+PAD gpio_10    N  gf180mcu_fd_io__bi_t ;
+PAD gpio_11    N  gf180mcu_fd_io__bi_t ;
+PAD gpio_12    N  gf180mcu_fd_io__bi_t ;
+PAD analog_11  N gf180mcu_fd_io__asig_5p0;
+PAD analog_12  N gf180mcu_fd_io__asig_5p0;
+PAD analog_13  N gf180mcu_fd_io__asig_5p0;
+PAD analog_14  N gf180mcu_fd_io__asig_5p0;
+PAD analog_15  N gf180mcu_fd_io__asig_5p0;
+PAD analog_16  N gf180mcu_fd_io__asig_5p0;
+PAD gpio_13    N  gf180mcu_fd_io__bi_t ;
+PAD gpio_14    N  gf180mcu_fd_io__bi_t ;
+PAD gpio_15    N  gf180mcu_fd_io__bi_t ;
+PAD gpio_16    N  gf180mcu_fd_io__bi_t ;
+PAD gpio_17    N  gf180mcu_fd_io__bi_t ;\
+PAD gpio_18    N  gf180mcu_fd_io__bi_t ;
+PAD gpio_19    N  gf180mcu_fd_io__bi_t ;
+PAD analog_17  N gf180mcu_fd_io__asig_5p0;
+PAD analog_18  N gf180mcu_fd_io__asig_5p0;
+PAD analog_19  N gf180mcu_fd_io__asig_5p0;
+PAD analog_120  N gf180mcu_fd_io__asig_5p0;
+PAD analog_121  N gf180mcu_fd_io__asig_5p0;
+PAD analog_122  N gf180mcu_fd_io__asig_5p0;
+PAD analog_123  N gf180mcu_fd_io__asig_5p0;
+PAD analog_124  N gf180mcu_fd_io__asig_5p0;
+PAD vdd_10     N  gf180mcu_fd_io__dvdd ;
+PAD vdd_11     N  gf180mcu_fd_io__dvdd ;
+PAD vdd_12     N  gf180mcu_fd_io__dvdd ;
+PAD vdd_13     N  gf180mcu_fd_io__dvdd ;
+
+
 
 # WEST
-PAD vss_2     W  gf180mcu_fd_io__dvss ;
-PAD gpio_2    W  gf180mcu_fd_io__bi_t ;
-PAD vdd_2     W  gf180mcu_fd_io__dvdd ;
+PAD vss_20     W  gf180mcu_fd_io__dvss ;
+PAD vss_20     W  gf180mcu_fd_io__dvss ;
+PAD vss_21     W  gf180mcu_fd_io__dvss ;
+PAD vss_22     W  gf180mcu_fd_io__dvss ;
+PAD gpio_20    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_21    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_22    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_23    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_24    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_25    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_26    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_27    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_28    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_29    W  gf180mcu_fd_io__bi_t ;
+PAD gpio_30    W  gf180mcu_fd_io__bi_t ;
+PAD analog_20  W gf180mcu_fd_io__asig_5p0;
+PAD analog_21  W gf180mcu_fd_io__asig_5p0;
+PAD analog_22  W gf180mcu_fd_io__asig_5p0;
+PAD analog_23  W gf180mcu_fd_io__asig_5p0;
+PAD analog_24  W gf180mcu_fd_io__asig_5p0;
+PAD analog_25  W gf180mcu_fd_io__asig_5p0;
+PAD vdd_20     W  gf180mcu_fd_io__dvdd ;
+PAD vdd_21     W  gf180mcu_fd_io__dvdd ;
+PAD vdd_22     W  gf180mcu_fd_io__dvdd ;
+PAD vdd_23     W  gf180mcu_fd_io__dvdd ;
 
 # EAST
-PAD vss_3     E  gf180mcu_fd_io__dvss ;
-PAD gpio_3    E  gf180mcu_fd_io__bi_t ;
-PAD vdd_3     E  gf180mcu_fd_io__dvdd ;
+PAD vss_20     E  gf180mcu_fd_io__dvss ;
+PAD vss_20     E  gf180mcu_fd_io__dvss ;
+PAD vss_21     E  gf180mcu_fd_io__dvss ;
+PAD vss_22     E  gf180mcu_fd_io__dvss ;
+PAD gpio_20    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_21    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_22    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_23    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_24    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_25    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_26    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_27    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_28    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_29    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_30    E  gf180mcu_fd_io__bi_t ;
+PAD gpio_31    E  gf180mcu_fd_io__bi_t ;
+PAD analog_20  E gf180mcu_fd_io__asig_5p0;
+PAD analog_21  E gf180mcu_fd_io__asig_5p0;
+PAD analog_22  E gf180mcu_fd_io__asig_5p0;
+PAD analog_23  E gf180mcu_fd_io__asig_5p0;
+PAD analog_24  E gf180mcu_fd_io__asig_5p0;
+PAD analog_25  E gf180mcu_fd_io__asig_5p0;
+PAD vdd_20     E  gf180mcu_fd_io__dvdd ;
+PAD vdd_21     E  gf180mcu_fd_io__dvdd ;
+PAD vdd_22     E  gf180mcu_fd_io__dvdd ;
+PAD vdd_23     E  gf180mcu_fd_io__dvdd ;
