--- a/scripts/sg130/sg130.config
+++ b/scripts/sg130/sg130.config
@@ -1,5 +1,6 @@
 DESIGN my_chip ;
 GRID 1 ;
+# Area adjusted for SG13G2 pad sizes (180um height)
 AREA 4000 3000 ;
 
 # --- CORNERS --- #
@@ -9,25 +10,127 @@ CORNER corner_nw NW sg13g2_Corner ;
 CORNER corner_ne NE sg13g2_Corner ;
 
 # --- PADS --- #
-# Using 4mA InOut for GPIOs.
-# Using IOVdd/IOVss for the Ring Power.
 
-# Bottom (South)
-PAD vss_0     S  sg13g2_IOPadIOVss ;
-PAD gpio_0    S  sg13g2_IOPadInOut4mA ;
-PAD vdd_0     S  sg13g2_IOPadIOVdd ;
+# SOUTH #
+PAD vss_01     S  sg13g2_IOPadVss ;
+PAD vss_02     S  sg13g2_IOPadVss ;
+PAD vss_03     S  sg13g2_IOPadVss ;
+PAD vss_04     S  sg13g2_IOPadVss ;
+PAD analog_01  S  sg13g2_IOPadAnalog ;
+PAD analog_02  S  sg13g2_IOPadAnalog ;
+PAD analog_03  S  sg13g2_IOPadAnalog ;
+PAD analog_04  S  sg13g2_IOPadAnalog ;
+PAD analog_05  S  sg13g2_IOPadAnalog ;
+PAD analog_06  S  sg13g2_IOPadAnalog ;
+PAD analog_07  S  sg13g2_IOPadAnalog ;
+PAD analog_08  S  sg13g2_IOPadAnalog ;
+PAD gpio_01    S  sg13g2_IOPadInOut4mA ;
+PAD gpio_02    S  sg13g2_IOPadInOut4mA ;
+PAD gpio_03    S  sg13g2_IOPadInOut4mA ;
+PAD gpio_04    S  sg13g2_IOPadInOut4mA ;
+PAD analog_09  S  sg13g2_IOPadAnalog ;
+PAD analog_010 S  sg13g2_IOPadAnalog ;
+PAD analog_011 S  sg13g2_IOPadAnalog ;
+PAD analog_012 S  sg13g2_IOPadAnalog ;
+PAD analog_013 S  sg13g2_IOPadAnalog ;
+PAD analog_014 S  sg13g2_IOPadAnalog ;
+PAD gpio_05    S  sg13g2_IOPadInOut4mA ;
+PAD gpio_06    S  sg13g2_IOPadInOut4mA ;
+PAD gpio_07    S  sg13g2_IOPadInOut4mA ;
+PAD gpio_08    S  sg13g2_IOPadInOut4mA ;
+PAD gpio_09    S  sg13g2_IOPadInOut4mA ;
+PAD vdd_01     S  sg13g2_IOPadVdd ;
+PAD vdd_02     S  sg13g2_IOPadVdd ;
+PAD vdd_03     S  sg13g2_IOPadVdd ;
+PAD vdd_04     S  sg13g2_IOPadVdd ;
 
-# Top (North) #
-PAD vss_1     N  sg13g2_IOPadIOVss ;
-PAD gpio_1    N  sg13g2_IOPadInOut4mA ;
-PAD vdd_1     N  sg13g2_IOPadIOVdd ;
 
-# Left (West) #
-PAD vss_2     W  sg13g2_IOPadIOVss;
-PAD gpio_2    W  sg13g2_IOPadInOut4mA ;
-PAD vdd_2     W  sg13g2_IOPadIOVdd;
+# NORTH
+PAD vss_10     N  sg13g2_IOPadVss ;
+PAD vss_11     N  sg13g2_IOPadVss ;
+PAD vss_12     N  sg13g2_IOPadVss ;
+PAD vss_13     N  sg13g2_IOPadVss ;
+PAD gpio_10    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_11    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_12    N  sg13g2_IOPadInOut4mA ;
+PAD analog_11  N  sg13g2_IOPadAnalog ;
+PAD analog_12  N  sg13g2_IOPadAnalog ;
+PAD analog_13  N  sg13g2_IOPadAnalog ;
+PAD analog_14  N  sg13g2_IOPadAnalog ;
+PAD analog_15  N  sg13g2_IOPadAnalog ;
+PAD analog_16  N  sg13g2_IOPadAnalog ;
+PAD gpio_13    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_14    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_15    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_16    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_17    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_18    N  sg13g2_IOPadInOut4mA ;
+PAD gpio_19    N  sg13g2_IOPadInOut4mA ;
+PAD analog_17  N  sg13g2_IOPadAnalog ;
+PAD analog_18  N  sg13g2_IOPadAnalog ;
+PAD analog_19  N  sg13g2_IOPadAnalog ;
+PAD analog_120 N  sg13g2_IOPadAnalog ;
+PAD analog_121 N  sg13g2_IOPadAnalog ;
+PAD analog_122 N  sg13g2_IOPadAnalog ;
+PAD analog_123 N  sg13g2_IOPadAnalog ;
+PAD analog_124 N  sg13g2_IOPadAnalog ;
+PAD vdd_10     N  sg13g2_IOPadVdd ;
+PAD vdd_11     N  sg13g2_IOPadVdd ;
+PAD vdd_12     N  sg13g2_IOPadVdd ;
+PAD vdd_13     N  sg13g2_IOPadVdd ;
 
-# Right (East) #
-PAD vss_3     E  sg13g2_IOPadIOVss;
-PAD gpio_3    E  sg13g2_IOPadInOut4mA ;
-PAD vdd_3     E  sg13g2_IOPadIOVdd;
+
+# WEST
+PAD vss_20     W  sg13g2_IOPadVss ;
+PAD vss_20_2   W  sg13g2_IOPadVss ;
+PAD vss_21     W  sg13g2_IOPadVss ;
+PAD vss_22     W  sg13g2_IOPadVss ;
+PAD gpio_20    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_21    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_22    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_23    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_24    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_25    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_26    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_27    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_28    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_29    W  sg13g2_IOPadInOut4mA ;
+PAD gpio_30    W  sg13g2_IOPadInOut4mA ;
+PAD analog_20  W  sg13g2_IOPadAnalog ;
+PAD analog_21  W  sg13g2_IOPadAnalog ;
+PAD analog_22  W  sg13g2_IOPadAnalog ;
+PAD analog_23  W  sg13g2_IOPadAnalog ;
+PAD analog_24  W  sg13g2_IOPadAnalog ;
+PAD analog_25  W  sg13g2_IOPadAnalog ;
+PAD vdd_20     W  sg13g2_IOPadVdd ;
+PAD vdd_21     W  sg13g2_IOPadVdd ;
+PAD vdd_22     W  sg13g2_IOPadVdd ;
+PAD vdd_23     W  sg13g2_IOPadVdd ;
+
+# EAST
+PAD vss_30     E  sg13g2_IOPadVss ;
+PAD vss_30_2   E  sg13g2_IOPadVss ;
+PAD vss_31     E  sg13g2_IOPadVss ;
+PAD vss_32     E  sg13g2_IOPadVss ;
+PAD gpio_32    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_33    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_34    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_35    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_36    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_37    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_38    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_39    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_40    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_41    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_42    E  sg13g2_IOPadInOut4mA ;
+PAD gpio_43    E  sg13g2_IOPadInOut4mA ;
+PAD analog_30  E  sg13g2_IOPadAnalog ;
+PAD analog_31  E  sg13g2_IOPadAnalog ;
+PAD analog_32  E  sg13g2_IOPadAnalog ;
+PAD analog_33  E  sg13g2_IOPadAnalog ;
+PAD analog_34  E  sg13g2_IOPadAnalog ;
+PAD analog_35  E  sg13g2_IOPadAnalog ;
+PAD vdd_30     E  sg13g2_IOPadVdd ;
+PAD vdd_31     E  sg13g2_IOPadVdd ;
+PAD vdd_32     E  sg13g2_IOPadVdd ;
+PAD vdd_33     E  sg13g2_IOPadVdd ;
